menambahkan dokumentasi show tiket
